fix top-line on collapsible content not being visible in light mode

--- a/src/css/tailwind.css
+++ b/src/css/tailwind.css
@@ -332,7 +332,7 @@ input[type="radio"]:checked::after {
 	@apply fixed top-4 right-4 z-10;
 }
 #controls-container.scroll-with-page .collapsed-controls .control-wrapper {
-	@apply bg-white text-blue border border-blue w-[200px] p-3 -mt-[1px] overflow-visible;
+	@apply bg-white text-blue border border-blue w-[200px] p-3;
 }
 #controls-container.scroll-with-page .collapsed-controls #text-size {
 	@apply mt-0;
